    [terrain_mask] actions.
   * rename the "hides" status as "hidden"
   * add a new image path function : GS to greyscale the image
   * [store_map_dimensions] also stores map border size now.
   * renamed old [attacks] special to [swarm]
   * created [attacks] special with expected behaviour and usage similar to
	 [damage] special
 * wesnothd
   * added expiration time to bans
   * added restart command to server that does graceful restart
   * added option to do graceful shut down for server
 * campaignd
   * made campaign server use gzip compression for networking
   * detect client connection mode and ue same for sending data
   * made campaign server use gzip for storing addons
   * added configuraion option to choose gzip compression level
   * made it possible to store content authors' e-mail addresses
     for administrative purposes
   * authors can specify the type of their content ('type'
     field in .pbl files)
 * miscellaneous and bug fixes:
   * fixed parser bug that prevented loading binary data strings
   * fixed issues with campaign info in non-compressed saved games
     (bug #11386)
   * Implemented the option to use the mouse selection clipboard in X11
     the new widget library also uses it.
   * fixed multiplayer_connect to handle leave_game command from server
   * improved reloading of game configs after installing or removing addons
   * fixed threading bug in upload_logs
   * dissallow_observers is on as default if side has controller=null
   * Fixed null-pointer reference in network code
   * Made networking code check system buffer size and limit send length
   * Implemented send_file to reduce memory usage when sending files
   * Implemented send_file using sendfile() system call 
   * Fixed tokenizer not to strip CR from quoted string because it would
     destroy images transfered over network
   * Added possibility to use per fight EV statistics proposed by maboul
   * Added smoother FPS limit to server