@@ -57,6 +57,11 @@
         comment = "Macro library reorganization, major UI makeover introducing lightweight transparent popups and linger mode, maintainance tools for WML, six campaigns lifted from UMC, one all-original campaign, editor refactoring, and many many code cleanups."
     [/entry]
     [entry]
+        name = "Greg Copeland (Oracle)"
+	comment = "coding; Server optimizations."
+	ircuser = "BlindOracle"
+    [/entry]
+    [entry]
         name = "Guillaume Melquiond (silene)"
         comment = "coding, bug fixes"
     [/entry]
